# phpgp

./: .gitignore  README.md  install.sh  phgpg.py  requirements.txt  setup.cfg
.github/workflows/: python-publish.yml
phpgp/: __init__.py  cli.py  server.py  utils.py
