[metadata]
name = phpgp
version = 1.1.0
author = zabojeb
author_email = zabojeb@bk.ru
description =  phPGP - tool to store your PGP keys on the physical storage (USB, flash drive etc.)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zabojeb/phpgp
project_urls =
    Bug Tracker = https://github.com/zabojeb/phpgp/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    pgpy13
    psutil
    prompt_toolkit
    click
    cryptography
    python-gnupg
    keyring

[options.entry_points]
console_scripts =
    phpgp=phpgp.cli:cli

[options.extras_require]
dev =
    pytest
    black
